--- a/templates/skeleton.html
+++ b/templates/skeleton.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="<++>">
+		<link rel="icon" href="<++>">
+		<meta name="description" content="<++>">
 		<title><++></title>
 	</head>
 	<body>
